@@ -1,6 +1,6 @@
 /*
  * windivert_shared.c
- * (C) 2018, all rights reserved,
+ * (C) 2019, all rights reserved,
  *
  * This file is part of WinDivert.
  *
