@@ -1,7 +1,7 @@
 #!/bin/bash
 #
 # build.sh
-# (C) 2018, all rights reserved,
+# (C) 2019, all rights reserved,
 #
 # This file is part of WinDivert.
 #
