@@ -1,5 +1,5 @@
 :: wddk-build.bat
-:: (C) 2018, all rights reserved,
+:: (C) 2019, all rights reserved,
 ::
 :: This file is part of WinDivert.
 ::
